--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,9 @@
 [submodule "gnome/themes/Orchis-theme"]
 	path = gnome/themes/Orchis-theme
 	url = https://github.com/vinceliuice/Orchis-theme
+[submodule "gnome/icons/Fluent-icon-theme"]
+	path = gnome/icons/Fluent-icon-theme
+	url = https://github.com/vinceliuice/Fluent-icon-theme
+[submodule "gnome/cursors/Nordzy-cursors"]
+	path = gnome/cursors/Nordzy-cursors
+	url = https://github.com/alvatip/Nordzy-cursors
