--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "gnome/terminal/gnome-terminal"]
 	path = gnome/terminal/gnome-terminal
 	url = https://github.com/dracula/gnome-terminal
+[submodule "zsh/themes/pure"]
+	path = zsh/themes/pure
+	url = https://github.com/sindresorhus/pure
