--- a/.gitmodules
+++ b/.gitmodules
@@ -8,5 +8,5 @@
 	path = zsh/plugins/zsh-completions
 	url = https://github.com/zsh-users/zsh-completions
 [submodule "zsh/themes/pure"]
-	path = zsh/themes/pure
+	path = zsh/theme/pure
 	url = https://github.com/sindresorhus/pure
